# cdse

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  docs.yml  pypi-workflow.yml
cli/: index.html
configuration/: index.html
docs/: cli.md  configuration.md  filters.md  index.md  quickstart.md  usage.md
docs/reference/: auth.md  client.md  config.md  odata.md  s3.md  stac.md  subscriptions.md  traceability.md
examples/: README.md  bursts_search.py  odata_search_download.py  quickstart.py  s3_download.py  stac_search_download.py  subscription_demo.py  subscription_watch.py  traceability_lookup.py
filters/: index.html
quickstart/: index.html
reference/auth/: index.html
reference/client/: index.html
reference/config/: index.html
reference/odata/: index.html
reference/s3/: index.html
reference/stac/: index.html
reference/subscriptions/: index.html
reference/traceability/: index.html
search/: search_index.json
src/cdse/: __init__.py  client.py  config.py  exceptions.py  ratelimit.py  s3.py  subscriptions.py  traceability.py  transfer.py  transport.py
src/cdse/auth/: __init__.py  manager.py  providers.py  store.py
src/cdse/cli/: __init__.py  _common.py  auth.py  bursts.py  main.py  odata.py  s3.py  stac.py  subscriptions.py  traceability.py
src/cdse/odata/: __init__.py  api.py  attributes.py  bursts.py  deleted.py  download.py  models.py  products.py  query.py
src/cdse/stac/: __init__.py  api.py  download.py  models.py  search.py
tests/: conftest.py  test_attributes.py  test_auth.py  test_bursts.py  test_cli.py  test_deleted.py  test_download.py  test_file_store.py  test_products.py  test_query.py  test_s3.py  test_stac.py  test_subscriptions.py  test_traceability.py  test_transport.py
usage/: index.html
