[project]
name = "cdse"
version = "0.1.1"
description = "Python client for the Copernicus Data Space Ecosystem (CDSE) APIs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
cli = [
    "typer>=0.12",
    "platformdirs>=4.2",
]
s3 = [
    "boto3>=1.34",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.scripts]
cdse = "cdse.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    # Installed in the dev environment so the CLI and S3 modules type check
    # and test.
    "typer>=0.12",
    "platformdirs>=4.2",
    "boto3>=1.34",
    # Documentation site.
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cdse"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]
# Ad-hoc utility scripts are not part of the typed, linted package.
extend-exclude = ["scripts"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "RUF",  # ruff-specific rules
]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["scripts/", "examples/"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_reexport = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["boto3.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
    "live: tests that reach the live CDSE APIs (deselected by default with -m 'not live')",
]
